<resources>
    <string name="app_name">Self-Promo App</string>

    <string name="hint_contact_name">Contact Name</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="hint_my_name">My Display Name</string>
    <string name="check_box_text_include_junior">Include Junior</string>
    <string name="check_box_text_start">Immediate Start</string>
    <string name="hint_available_from">Available from date</string>
    <string name="button_text_preview">Preview Message</string>

    <string name="button_text_send">Send Message</string>
    <string name="spinner_entry_job1">Android Developer</string>
    <string name="spinner_entry_job2">Java Developer</string>
</resources>